--- a/study-agent/pyproject.toml
+++ b/study-agent/pyproject.toml
@@ -3,7 +3,7 @@ name = "study-and-learn-agent"
 version = "0.1.0"
 description = "A multi-agent system for personalized, interactive learning"
 authors = [
-    {name = "JayVisaria9",email = "jay.visaria@pfizer.com"}
+    {name = "jayVisaria",email = "jay.visaria.54@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.12"
